--- a/.github/workflows/build-android-example.yml
+++ b/.github/workflows/build-android-example.yml
@@ -1,18 +1,22 @@
-name: 🤖 Build Android
+name: 🤖 Build Android Example
 
 on:
   push:
     branches:
       - main
     paths:
-      - '.github/workflows/build-android.yml'
+      - '.github/workflows/build-android-example.yml'
       - 'android/**'
+      - 'example/android/**'
       - 'yarn.lock'
+      - 'example/yarn.lock'
   pull_request:
     paths:
-      - '.github/workflows/build-android.yml'
+      - '.github/workflows/build-android-example.yml'
       - 'android/**'
+      - 'example/android/**'
       - 'yarn.lock'
+      - 'example/yarn.lock'
 
 jobs:
   build:
@@ -38,8 +42,8 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-      - name: Install node_modules
-        run: yarn install --frozen-lockfile
+      - name: Install node_modules for example/
+        run: yarn install --frozen-lockfile --cwd example
 
       - name: Restore Gradle cache
         uses: actions/cache@v3
@@ -50,5 +54,5 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-      - name: Run Gradle Build for android/
-        run: cd android && ./gradlew assembleDebug --build-cache
+      - name: Run Gradle Build for example/android/
+        run: cd example/android && ./gradlew assembleDebug --build-cache && cd ../..
