--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,6 +33,7 @@ def reactNativeArchitectures() {
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply from: "$projectDir/react-native-helpers.gradle"
 
 if (isNewArchitectureEnabled()) {
   apply plugin: 'com.facebook.react'
@@ -151,8 +152,13 @@ repositories {
 def kotlin_version = getExtOrDefault('kotlinVersion')
 
 dependencies {
-  // noinspection GradleDynamicVersion
-  implementation 'com.facebook.react:react-native:+'
+  if (project.ext.shouldConsumeReactNativeFromMavenCentral()) {
+    // noinspection GradleDynamicVersion
+    implementation 'com.facebook.react:react-android:+'
+  } else {
+    // noinspection GradleDynamicVersion
+    implementation 'com.facebook.react:react-native:+'
+  }
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   implementation 'androidx.core:core-ktx:1.5.0-beta03'
 }
