--- a/example/package.json
+++ b/example/package.json
@@ -12,37 +12,37 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.0",
-    "@react-native-masked-view/masked-view": "^0.2.9",
-    "@react-navigation/bottom-tabs": "^6.5.8",
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/native-stack": "^6.9.13",
-    "@react-navigation/stack": "^6.3.17",
-    "@testing-library/react-hooks": "^8.0.1",
-    "lottie-react-native": "^6.1.2",
+    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
+    "lottie-react-native": "^6.4.1",
     "react": "18.2.0",
-    "react-native": "0.72.11",
-    "react-native-gesture-handler": "2.12.1",
+    "react-native": "0.73.0",
+    "react-native-gesture-handler": "2.14.0",
     "react-native-keyboard-controller": "link:../",
     "react-native-reanimated": "3.6.1",
-    "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.24.0",
-    "react-native-text-input-mask": "3.1.5",
-    "react-native-toast-message": "^2.1.6"
+    "react-native-safe-area-context": "^4.8.1",
+    "react-native-screens": "^3.29.0",
+    "react-native-toast-message": "^2.1.9",
+    "react-native-text-input-mask": "3.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/metro-config": "^0.72.11",
+    "@react-native/babel-preset": "^0.73.18",
+    "@react-native/metro-config": "^0.73.2",
+    "@react-native/typescript-config": "^0.73.1",
     "@testing-library/jest-native": "^5.3.2",
+    "@testing-library/react-hooks": "8.0.1",
     "@testing-library/react-native": "^11.5.0",
-    "@tsconfig/react-native": "^3.0.0",
-    "@types/react": "^18.0.24",
+    "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.2.1",
+    "babel-jest": "^29.6.3",
     "babel-plugin-module-resolver": "^4.0.0",
-    "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.76.8",
+    "jest": "^29.6.3",
     "patch-package": "^8.0.0",
     "react-test-renderer": "18.2.0"
   },
@@ -60,6 +60,6 @@
     ]
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   }
 }
