--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native",
     "keyboard",
     "animation",
+    "dismiss",
     "focused input",
     "text changed",
     "avoiding view",
