--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -16,6 +16,7 @@ on:
       - main
     paths:
       - '.github/workflows/build-ios.yml'
+      - 'react-native-keyboard-controller.podspec'
       - 'ios/**'
       - 'example/ios/**'
       - 'yarn.lock'
