--- a/FabricExample/package.json
+++ b/FabricExample/package.json
@@ -17,24 +17,24 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@react-navigation/stack": "^6.3.25",
-    "lottie-react-native": "^6.6.0",
+    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "2.15.0",
+    "react-native": "0.74.0",
+    "react-native-gesture-handler": "2.16.1",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-keyboard-controller": "link:../",
-    "react-native-reanimated": "3.8.0",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0",
+    "react-native-reanimated": "3.9.0",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "react-native-toast-message": "^2.1.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "^0.73.21",
-    "@react-native/metro-config": "^0.73.5",
-    "@react-native/typescript-config": "^0.73.1",
+    "@react-native/babel-preset": "0.74.77",
+    "@react-native/metro-config": "0.74.77",
+    "@react-native/typescript-config": "0.74.77",
     "@testing-library/jest-native": "^5.3.3",
     "@testing-library/react-hooks": "8.0.1",
     "@testing-library/react-native": "^11.5.0",
