--- a/example/ios/KeyboardControllerExample.xcodeproj/xcshareddata/xcschemes/KeyboardControllerExample.xcscheme
+++ b/example/ios/KeyboardControllerExample.xcodeproj/xcshareddata/xcschemes/KeyboardControllerExample.xcscheme
@@ -50,11 +50,13 @@
             ReferencedContainer = "container:KeyboardControllerExample.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <Testables>
+      </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      buildConfiguration = "Release"
+      selectedDebuggerIdentifier = ""
+      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
