--- a/e2e/package.json
+++ b/e2e/package.json
@@ -7,7 +7,7 @@
     "build-example:android": "detox build --configuration example.android.emu.release",
     "test-example:android": "detox test --configuration example.android.emu.release --loglevel verbose --take-screenshots failing --record-videos failing --retries 2",
     "build-example:ios": "detox build --configuration example.ios.sim.release",
-    "test-example:ios": "detox test --configuration example.ios.sim.release --loglevel verbose --take-screenshots failing --record-videos failing --retries 2",
+    "test-example:ios": "detox test --configuration example.ios.sim.release --loglevel verbose --take-screenshots failing --record-videos all --retries 2",
     "test": "echo \"Error: no test specified\" && exit 1",
     "detox-clean": "detox clean-framework-cache && detox build-framework-cache",
     "postinstall": "patch-package"
