--- a/example/ios/KeyboardControllerExample.xcodeproj/xcshareddata/xcschemes/KeyboardControllerExample.xcscheme
+++ b/example/ios/KeyboardControllerExample.xcodeproj/xcshareddata/xcschemes/KeyboardControllerExample.xcscheme
@@ -57,6 +57,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      disablePerformanceAntipatternChecker = "YES"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
