chore: rename "Run Gradle Lint" -> "Run Gradle Assemble" for Android Build job

--- a/.github/workflows/verify-android.yml
+++ b/.github/workflows/verify-android.yml
@@ -56,7 +56,7 @@ jobs:
           java-version: "17"
       - name: Install dependencies
         run: yarn install --frozen-lockfile --cwd ..
-      - name: Run Gradle Lint
+      - name: Run Gradle Assemble
         run: ./gradlew assembleDebug
   detekt:
     runs-on: ubuntu-latest
