--- a/.github/workflows/android-e2e-test.yml
+++ b/.github/workflows/android-e2e-test.yml
@@ -26,10 +26,12 @@ jobs:
     timeout-minutes: 60
     env:
       WORKING_DIRECTORY: example
-      API_LEVEL: 28
     concurrency:
       group: android-e2e-${{ github.ref }}
       cancel-in-progress: true
+    strategy:
+      matrix:
+        api: [28, 33]
     steps:
       - uses: actions/checkout@v4
       - name: Free Disk Space (Ubuntu)
@@ -90,20 +92,20 @@ jobs:
           path: |
             ~/.android/avd/*
             ~/.android/adb*
-          key: avd-${{ env.API_LEVEL }}
+          key: avd-${{ matrix.api }}
       - name: Run emulator and tests
         uses: reactivecircus/android-emulator-runner@v2.30.1
         with:
           working-directory: e2e
-          api-level: ${{ env.API_LEVEL }}
+          api-level: ${{ matrix.api }}
           target: default
           profile: pixel_2
           ram-size: "4096M"
           disk-size: "10G"
           disable-animations: false
-          avd-name: e2e_emulator
+          avd-name: e2e_emulator_${{ matrix.api }}
           arch: x86_64
-          script: yarn test-example:android
+          script: yarn test-example:android-${{ matrix.api }}
       - uses: actions/upload-artifact@v4
         if: ${{ failure() }}
         with:
