--- a/.github/workflows/android-e2e-test.yml
+++ b/.github/workflows/android-e2e-test.yml
@@ -27,11 +27,11 @@ jobs:
     env:
       WORKING_DIRECTORY: example
     concurrency:
-      group: android-e2e-${{ matrix.api }}-${{ github.ref }}
+      group: android-e2e-${{ matrix.devices.api }}-${{ github.ref }}
       cancel-in-progress: true
     strategy:
       matrix:
-        api: [28, 31]
+        devices: [{ api: 28, target: default }, { api: 31, target: default }]
     steps:
       - uses: actions/checkout@v4
       - name: Free Disk Space (Ubuntu)
@@ -92,20 +92,20 @@ jobs:
           path: |
             ~/.android/avd/*
             ~/.android/adb*
-          key: avd-${{ matrix.api }}
+          key: avd-${{ matrix.devices.api }}
       - name: Run emulator and tests
         uses: reactivecircus/android-emulator-runner@v2.30.1
         with:
           working-directory: e2e
-          api-level: ${{ matrix.api }}
-          target: default
+          api-level: ${{ matrix.devices.api }}
+          target: ${{ matrix.devices.target }}
           profile: pixel_2
           ram-size: "4096M"
           disk-size: "10G"
           disable-animations: false
-          avd-name: e2e_emulator_${{ matrix.api }}
+          avd-name: e2e_emulator_${{ matrix.devices.api }}
           arch: x86_64
-          script: yarn test-example:android-${{ matrix.api }}
+          script: yarn test-example:android-${{ matrix.devices.api }}
       - uses: actions/upload-artifact@v4
         if: ${{ failure() }}
         with:
