--- a/package.json
+++ b/package.json
@@ -81,9 +81,11 @@
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react-compiler": "^0.0.0-experimental-0998c1e-20240625",
     "husky": "^6.0.0",
     "jest": "^29.6.3",
     "pod-install": "^0.1.0",
