--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,6 +3,7 @@ name: 🌐 Publish Package to npmjs
 on:
   release:
     types: [created]
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
