--- a/e2e/package.json
+++ b/e2e/package.json
@@ -32,7 +32,7 @@
     "@types/pngjs": "^6.0.1",
     "async-retry": "^1.3.3",
     "colors": "^1.4.0",
-    "detox": "^20.25.1",
+    "detox": "20.23.1",
     "jest": "^29",
     "patch-package": "^8.0.0",
     "pixelmatch": "^5.3.0",
