--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -37,9 +37,9 @@ jobs:
         with:
           node-version: 18.x
           cache: "yarn"
-      - uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: "15.4"
+      # - uses: maxim-lobanov/setup-xcode@v1
+      #   with:
+      #     xcode-version: "15.4"
       - name: Get Xcode version
         run: xcodebuild -version
       - name: Install AppleSimulatorUtils
