--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -22,10 +22,10 @@ on:
       - "src/**"
 
 jobs:
-  test:
-    name: ⚙️ Automated test cases
+  build:
+    name: 🏗️ Build E2E ipa
     runs-on: macos-14
-    timeout-minutes: 90
+    timeout-minutes: 60
     env:
       WORKING_DIRECTORY: example
     concurrency:
@@ -37,9 +37,9 @@ jobs:
         with:
           node-version: 18.x
           cache: "yarn"
-      # - uses: maxim-lobanov/setup-xcode@v1
-      #   with:
-      #     xcode-version: "15.4"
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: "15.4"
       - name: Get Xcode version
         run: xcodebuild -version
       - name: Install AppleSimulatorUtils
@@ -83,6 +83,35 @@ jobs:
       - name: Build app
         working-directory: e2e
         run: yarn build-example:ios
+      - uses: actions/upload-artifact@v4
+        with:
+          name: ios-e2e-ipa
+          path: example/ios/build/Build/Products/Release-iphonesimulator/KeyboardControllerExample.app/**
+  e2e-test:
+    name: ⚙️ Automated test cases
+    runs-on: macos-14
+    timeout-minutes: 60
+    env:
+      WORKING_DIRECTORY: example
+    concurrency:
+      group: ios-e2e-${{ matrix.devices.ios }}-${{ github.ref }}
+      cancel-in-progress: true
+    strategy:
+      matrix:
+        devices: [{ ios: 17 }]
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - name: Download a single artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ios-e2e-ipa
+          path: example/ios/build/Build/Products/Release-iphonesimulator/KeyboardControllerExample.app/
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: "15.4"
+      - name: Install e2e dependencies
+        run: yarn install --cwd e2e
       - name: Use software keyboard
         run: defaults write com.apple.iphonesimulator ConnectHardwareKeyboard -bool NO
       - name: Test app
