--- a/.github/workflows/ios-e2e-test.yml
+++ b/.github/workflows/ios-e2e-test.yml
@@ -110,6 +110,19 @@ jobs:
           xcode-version: "15.4"
       - name: Install AppleSimulatorUtils
         run: brew tap wix/brew && brew install applesimutils
+      - name: Save yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
+      - name: Restore node_modules from cache
+        uses: actions/cache@v4
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - name: Install root dependencies
+        run: yarn install
       - name: Install e2e dependencies
         run: yarn install --cwd e2e
       - name: Use software keyboard
