--- a/e2e/package.json
+++ b/e2e/package.json
@@ -11,7 +11,7 @@
     "test-example:ios-15": "detox test --configuration example.ios.sim-15.release --loglevel verbose --take-screenshots failing --record-videos failing --retries 2",
     "test-example:ios-16": "detox test --configuration example.ios.sim-16.release --loglevel verbose --take-screenshots failing --record-videos failing --retries 2",
     "test-example:ios-17": "detox test --configuration example.ios.sim-17.release --loglevel verbose --take-screenshots failing --record-videos failing --retries 2",
-    "test-example:ios-18": "detox test --configuration example.ios.sim-18.release --loglevel verbose --take-screenshots failing --record-videos failing --retries 2",
+    "test-example:ios-18": "detox test --configuration example.ios.sim-18.release --loglevel verbose --take-screenshots failing --record-videos failing",
     "test": "echo \"Error: no test specified\" && exit 1",
     "detox-clean": "detox clean-framework-cache && detox build-framework-cache",
     "postinstall": "patch-package"
